--- a/Emails/HorticulturalHome.html
+++ b/Emails/HorticulturalHome.html
@@ -71,7 +71,7 @@ h1{
 						</td>
 					</tr>
 					<tr>
-					<td align="left" style="vertical-align:top;padding:20px 28px 20px;font-size:24px;font-weight:normal;font-family:Arial,Helvetica,sans-serif;color:#0F5677" class="mPad">It's a tough time for your plants, especially those that love bright light. Upgrade your lighting or check out some low light friendly plants:</td>
+					<td align="left" style="vertical-align:top;padding:20px 28px 20px;font-size:24px;font-weight:normal;font-family:Arial,Helvetica,sans-serif;color:#0F5677" class="mPad">It's a tough time for your plants, especially those that love bright light. Upgrade your <a href="#" target="_blank" style="color:#0F5677;text-decoration:underline;">light setup</a> or adopt <a href="#" target="_blank" style="color:#0F5677;text-decoration:underline;">low light</a> friendly plants:</td>
 					</tr>
 					<!-- Graph start -->
 					<tr>
@@ -177,7 +177,7 @@ h1{
 						 <table role="presentation" align="left" cellpadding="0" cellspacing="0" border="0" width="271" class="mWidth">
 							<tr>
 								<td align="left" class="mPad" style="vertical-align:top;padding:0 15px 0 0;">
-								<table align="center" width="271" class="mWidth" cellpadding="0" cellspacing="0" border="0" style="background-color:#ffffff;">
+								<table role="presentation" align="center" width="271" class="mWidth" cellpadding="0" cellspacing="0" border="0" style="background-color:#ffffff;">
 								<tr>
 									<td align="center" class="zeroPad" style="vertical-align:top;padding:0;">
 									<img src="images/david-emrich-Xlzx6sEoenQ-unsplash.jpg" width="240" height="auto" border="0" style="display:block" alt="Plant light">
@@ -191,7 +191,7 @@ h1{
 						<table role="presentation" align="left" cellpadding="0" cellspacing="0" border="0" width="271" class="mWidth">
 							<tr>
 								<td align="left" style="vertical-align:top;padding:0;">
-								<table align="center" width="271" class="mWidth" cellpadding="0" cellspacing="0" border="0" style="background-color:#ffffff;">
+								<table role="presentation" align="center" width="271" class="mWidth" cellpadding="0" cellspacing="0" border="0" style="background-color:#ffffff;">
 								
 								<tr>
 									<td align="left" class="mtxt topPad" style="vertical-align:top;padding:40px 0 12px 0;font-size:16px;font-weight:bold;font-family:Arial,Helvetica,sans-serif;color:#0F5677">Want bright colored plants?</td>	
