--- a/Emails/HorticulturalHome.html
+++ b/Emails/HorticulturalHome.html
@@ -53,7 +53,7 @@ h1{
 	<table role="presentation" class="mWidth" align="center" role="presentation" width="100%" border="0" cellspacing="0" cellpadding="0" style="min-width:600;background-color:#E2F1F6;">
 		<tr>
 			<td align="center" style="vertical-align:top;background-color:#E2F1F6;padding:0;">
-				<table role="presentation" align="center" width="600" class="mWidth" cellpadding="0" cellspacing="0" border="0" style="background-color:#ffffff;">
+				<table role="presentation" align="center" width="600" class="mWidth" cellpadding="0" cellspacing="0" border="0" style="background-color:#ffffff;border-left:2px solid #0F5677;border-right:2px solid #0F5677;">
 				<!--content start-->
 					<tr>
 						<td class="mPad" align="left" style="vertical-align:top;padding:36px 28px 20px;font-size:14px;font-weight:normal;font-family:Arial,Helvetica,sans-serif;color:#0F5677;">
@@ -216,7 +216,7 @@ h1{
 				 </tr>
 				<!--End Image left - text right --> 
 				<tr>
-					<td align="center" class="mPad" style="vertical-align:top;padding:20px 12px 20px 0;font-size:14px;font-weight:normal;font-family:Arial,Helvetica,sans-serif;color:#0F5677;background-color:#E2F1F6;">
+					<td align="center" class="mPad" style="vertical-align:top;padding:20px 12px 20px 0;font-size:14px;font-weight:normal;font-family:Arial,Helvetica,sans-serif;color:#0F5677;background-color:#e4ebe7;">
 					Thanks for being a subsciber. Read our legal <a href="#" target="_blank" style="color:#064224;text-decoration:underline;">text here</a>.
 					<br><br>
 					<a href="#" target="_blank" style="color:#064224;text-decoration:underline;">Manage Preferences</a> | <a href="#" target="_blank" style="color:#064224;text-decoration:underline;">Unsubscribe</a>
