--- a/National_Park.html
+++ b/National_Park.html
@@ -76,7 +76,6 @@ background-color:#ffffff !important;
 					<tr>
 					<td align="left" style="vertical-align:top;padding:20px 28px 20px;font-size:24px;font-weight:normal;font-family:Arial,Helvetica,sans-serif;color:#30405a" class="mPad">Hike one of the seven natural wonders of the world.</td>
 					</tr>
-				<!--Start two column responsive-->
 				<tr>
 					<td align="left" style="vertical-align:top;padding:0px 28px;">
 						 <table role="presentation" align="left" cellpadding="0" cellspacing="0" border="0" width="271" class="mWidth">
@@ -95,11 +94,11 @@ background-color:#ffffff !important;
 									<td align="left" class="mtxt zeroPad" style="vertical-align:top;padding:0px 50px 12px 0px;font-size:14px;font-weight:normal;font-family:Arial,Helvetica,sans-serif;color:#30405a;">Put this iconic trail on your list. Located in the South Rim of the Grand Canyon it takes you all the way down to the Colorado River. It is a challenging hike with an average grade of 10% along its entire length. You can backpack down to the canyon to spend the night or do a casual hike to the first rest point.</td>	
 							</tr>
 							<tr>
-									<td align="left" class="zeroPad" style="vertical-align:top;padding:0px 180px 20px 0px;">
-										<table role="presentation" align="center" cellpadding="0" cellspacing="0" border="0" style="vertical-align:top;">
+									<td align="left" class="zeroPad" style="vertical-align:top;padding:0px 170px 20px 0px;">
+										<table role="presentation" align="center" cellpadding="0" cellspacing="0" border="0" width="100" style="vertical-align:top;">
 											<tr>
 												<td role="button" align="center" style="background-color:#ffffff; font-size:16px; font-family:Helvetica, Arial, sans-serif;font-weight:bold;padding:5px 5px;border:3px solid #89666d; color:#89666d;border-radius:8px; -moz-border-radius:8px;-webkit-border-radius:8px;">
-													<a href="https://www.nps.gov/grca/planyourvisit/upload/brightangeltrail.pdf" target="_blank" style="color:#89666d;text-decoration:none;">View Trail
+													<a href="https://www.nps.gov/grca/planyourvisit/upload/brightangeltrail.pdf" target="_blank" style="color:#89666d;text-decoration:none;">View Trail</a>
 												</td>
 											</tr>
 										</table>
@@ -125,11 +124,11 @@ background-color:#ffffff !important;
 									<td align="left" class="mtxt zeroPad" style="vertical-align:top;padding:0px 30px 12px 0px;font-size:14px;font-weight:normal;font-family:Arial,Helvetica,sans-serif;color:#30405a;">The South Kaibab trail is a good alternative to the Bright Angel Trail for those looking to hike down to the Colorado river. Plus, who can resist its famous lookout called Ooh Ahh Point! Casual hikers can go past Ooh Ahh Point to Cedar Ridge before it's recommended to turn around.</td>	
 							</tr>
 							<tr>
-									<td align="left" class="zeroPad" style="vertical-align:top;padding:0px 180px 12px 0px;">
-										<table role="presentation" align="center" cellpadding="0" cellspacing="0" border="0" style="vertical-align:top;">
+									<td align="left" class="zeroPad" style="vertical-align:top;padding:0px 170px 12px 0px;">
+										<table role="presentation" align="center" width="100" cellpadding="0" cellspacing="0" border="0" style="vertical-align:top;">
 											<tr>
 												<td role="button" align="center" style="background-color:#ffffff; font-size:16px; font-family:Helvetica, Arial, sans-serif;font-weight:bold;padding:5px 5px;border:3px solid #89666d; color:#89666d;border-radius:8px; -moz-border-radius:8px;-webkit-border-radius:8px;">
-													<a href="https://www.nps.gov/grca/planyourvisit/upload/southkaibabtrail.pdf" target="_blank" style="color:#89666d;text-decoration:none;">View Trail
+                                                    <a href="https://www.nps.gov/grca/planyourvisit/upload/southkaibabtrail.pdf" target="_blank" style="color:#89666d;text-decoration:none;">View Trail</a>
 												</td>
 											</tr>
 										</table>
@@ -140,7 +139,6 @@ background-color:#ffffff !important;
 						 </table>
 					</td>
 				 </tr>
-				<!-- end two column responsive-->
 				<!-- Image left - text right -->
 				<tr>
 					<td align="left" style="vertical-align:top;padding:30px 28px;">
