Updating extension name
Updating extension name

--- a/EmailPortfolio.html
+++ b/EmailPortfolio.html
@@ -98,7 +98,7 @@
                               width="271" class="mWidth">
                               <tr>
                                 <td align="center" class="zeroPad" style="vertical-align:top;padding:0px;">
-                                  <img src="images/PortfolioEmail.jpeg" width="220" height="auto"
+                                  <img src="images/PortfolioEmail.jpg" width="220" height="auto"
                                     border="0" style="display:block" alt="Kristen Gilles">
                                 </td>
                               </tr>
