fixing alt text
fixing alt text

--- a/EmailPortfolio.html
+++ b/EmailPortfolio.html
@@ -343,7 +343,7 @@
                 <strong><img
                     src="https://pauleykr.github.io/Email/images/icon_UniW.png"
                     width="50" height="auto" border="0" style="display:inline;vertical-align:middle;"
-                    alt="Red Van icon">
+                    alt="Unicorn icon">
                   Kristen Gilles</strong>
               </td>
 
